--- a/src/styles/layout/footer.module.sass
+++ b/src/styles/layout/footer.module.sass
@@ -11,3 +11,63 @@
         font-family: $font-sans-serif
         color: #fff
         font-size: 0.9rem
+
+    #text-logo
+        width: 18rem
+        filter: drop-shadow(0 0.15rem 0 rgba(0, 0, 0, 0.2))
+
+    #links-wrapper
+        display: grid
+        grid-template-columns: 1fr auto 1fr
+        grid-gap: 3rem
+        background: rgba(255, 255, 255, 0.05)
+        padding: 0 1rem
+        margin-top: 0.5rem
+        border-radius: 0.5rem
+        width: 25rem
+
+        div
+            text-align: center
+
+        hr
+            height: 85%
+            border: 0
+            border-left: 1px dashed rgba(255, 255, 255, 0.2)
+            align-self: center
+
+        h2
+            font-family: $font-serif
+            color: #f0ca99
+            font-size: 1.25rem
+            text-align: center
+            font-weight: normal
+            margin: 0
+            margin-top: 0.5rem
+
+        ul
+            @include no-padding-margin()
+            list-style-type: none
+            margin-bottom: 1rem
+
+            a
+                @include preserve-anchor-style()
+
+            li
+                font-family: $font-sans-serif
+                color: #fff
+                font-size: 1rem
+
+                :hover
+                    color: rgb(255, 240, 200)
+
+            li:not(:last-child)
+                margin-bottom: 0.5rem
+
+@media (max-width: $breakpoint-medium)
+    #footer
+        #links-wrapper
+            grid-template-columns: 1fr
+            grid-gap: 0
+
+        hr
+            display: none
