Add and inject axe as dev-dependency for a11y check and fix some minor accesibility issues

--- a/src/styles/quiz/quiz.module.sass
+++ b/src/styles/quiz/quiz.module.sass
@@ -11,14 +11,14 @@
             font-family: $font-sans-serif
             border-radius: 0.5rem
             color: #fff
-            background: #6da75b
+            background: rgb(24, 103, 0)
             padding: 1rem 3rem
             font-size: 1.2rem
             cursor: pointer
             transition: transform 0.15s ease
 
         button:hover
-            box-shadow: 0 0 2rem rgba(126, 194, 113, 0.7)
+            box-shadow: 0 0 2rem rgba(96, 146, 85, 0.7)
             transform: scale(1.05)
     #score
         p
