Convert jpg/png images to webp/avif, add declarations and some further base size transformations via sharp for optimization

--- a/src/styles/about/strawhat-animation.module.sass
+++ b/src/styles/about/strawhat-animation.module.sass
@@ -14,7 +14,7 @@ $animation-duration: 3s
     position: relative
     height: $scene-height
     width: $scene-width
-    background: url("../../../public/img/treasure-island-background.jpg")
+    background: url("../../../public/img/treasure-island-background.jpg?as=webp&width=800")
     background-size: cover
     background-repeat: no-repeat
     background-position: center
