--- a/src/styles/categories/category-header.module.sass
+++ b/src/styles/categories/category-header.module.sass
@@ -20,7 +20,7 @@
         height: 100%
         width: 100%
         background-color: rgba(0, 0, 0, 0.5)
-        background-image: url("./../../../public/img/lined-paper.png")
+        background-image: url("./../../../public/img/lined-paper.png?as=avif&width=300")
         top: 0
         left: 0
         color: white
