--- a/src/styles/home/nav-banner.module.sass
+++ b/src/styles/home/nav-banner.module.sass
@@ -47,7 +47,7 @@
     #cards-wrapper
         max-width: 1600px
         background-color: rgba(20, 8, 0, 0.5)
-        background-image: url("../../../public/img/purty-wood.png")
+        background-image: url("../../../public/img/purty-wood.png?as=avif&width=200")
         border-radius: 0.5rem
         padding: 3rem
         margin-top: 4rem
