--- a/src/styles/theme/theme.module.sass
+++ b/src/styles/theme/theme.module.sass
@@ -15,10 +15,10 @@ $font-sans-serif: 'Open Sans', sans-serif
     @include set-gradient(top, #2a5298, #1e3c72, #1e3c72)
 
 .texture-background
-    background-image: url("./../../../public/img/graphy-dark.png")
+    background-image: url("./../../../public/img/graphy-dark.png?as=avif")
 
 .wanted-background
-    background: url("../../../public/img/category-background.jpg")
+    background: url("../../../public/img/category-background.jpg?as=webp")
     background-size: cover
 
 /* Browser behavior overrides */
