--- a/src/styles/episodes/episodes.module.sass
+++ b/src/styles/episodes/episodes.module.sass
@@ -12,7 +12,7 @@
     list-style-type: none
 
 .actor-card
-    background: url("../../../public/img/clapboard.jpg")
+    background: url("../../../public/img/clapboard.jpg?as=webp")
     background-size: cover
     border-radius: 0.5rem
     padding: 1rem
@@ -39,7 +39,7 @@
         @include no-padding-margin()
 
 .actor-card:hover
-    background: url("../../../public/img/clapboard-hover.jpg")
+    background: url("../../../public/img/clapboard-hover.jpg?as=webp&width=800")
     background-size: cover
     transform: scale(1.02)
 
